# cmb-ml

./: .gitignore  CITATION.cff  LICENSE  LICENSE.data  Pyilc_differences_Dec24.ipynb  README.md  env.yaml  main_analysis_compare.py  main_cenn.py  main_check_prep.py  main_cmbfscnn.py  main_cmbnncs.py  main_deepsphere.py  main_get_real_ps.py  main_make_noise_models.py  main_patch_nn.py  main_patch_nn2.py  main_planck_as_sims.py  main_pyilc_analysis.py  main_pyilc_analysis_demo.py  main_pyilc_predict.py  main_pyilc_predict_demo.py  main_sims.py  main_sims_demo.py  main_sims_fgo.py  main_sims_flex.py  main_sims_funky_dust.py  namaster_mask_dev.ipynb  poetry.toml  pyproject.toml  rename_obs.py
cfg/: config_cenn.yaml  config_cmbfscnn.yaml  config_cmbnncs_unet5.yaml  config_cmbnncs_unet8.yaml  config_comp_models.yaml  config_comp_models_demo_multirun.yaml  config_comp_models_t.yaml  config_deepsphere.yaml  config_demoD_dataset.yaml  config_demoE_framework.yaml  config_demoG_framework.yaml  config_noise_models.yaml  config_patch_nn.yaml  config_patch_nn_multiple_restarts.yaml  config_patch_nn_multirun.yaml  config_petroff_t.yaml  config_pyilc.yaml  config_pyilc_MR.yaml  config_pyilc_demo.yaml  config_pyilc_demo_hilc.yaml  config_pyilc_demo_multirun.yaml  config_pyilc_ellpeak_search.yaml  config_pyilc_t.yaml  config_pyilc_t_HILC.yaml  config_sim.yaml  config_sim_compose_obs_MR.yaml  config_sim_demo.yaml  config_sim_demo_multirun.yaml  config_sim_t.yaml  config_sim_t2.yaml
cmbml/: __init__.py
demonstrations/: A_hydra_tutorial.ipynb  C_setting_up_local.ipynb  E_.md  E_helper.py  (+10 more)
(+363 files in other folders)
