[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cmbml"
dynamic = ["version"]
description = "CMB Machine Learning pipeline"
license = { text = "CC-BY-4.0" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["cmbml", "cmbml.*", "hydra_plugins", "hydra_plugins.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cmbml = ["cfg/**/*.yaml"]

[tool.setuptools.dynamic]
version = { attr = "cmbml.__version__" }

[project.entry-points."hydra.searchpath_plugin"]
cmbml = "hydra_plugins.cmbml_searchpath_plugin.CMBMLSearchPathPlugin"
